# mlops_housing_price_predictor

./: .dockerignore  .gitignore  Dockerfile.airflow  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-airflow.txt  requirements.txt  vercel.json
.devcontainer/: devcontainer.json
.github/workflows/: airflow_build_validate.yml  manual_mlops_ops.yml  ml_pipeline_ci.yml
api/: index.py  requirements.txt
conf/: config.yaml  config_manager.py  default_config.yaml
conf/base/: data.yaml  feature.yaml  features.yaml  model.yaml  preprocessing.yaml  training.yaml
conf/local/: data.yaml
conf/production/: data.yaml
dags/: data_ingestion_dag.py  promote_candidate_dag.py  retraining_dag.py  train_candidate_dag.py
data/: query_data_from_supabase.py
data/feedback/: feedback.csv
data/processed/: test.csv  train.csv  val.csv
data/raw/: data_master.csv
data/samples/: batch_predict_20.csv
docker/: Dockerfile.api  Dockerfile.streamlit  docker-compose.airflow.yml  docker-compose.yml
docs/: APP_README.md
models/production/: config.yaml  metadata.json  model.pkl  preprocessor.pkl
notebooks/: 01_eda.ipynb  02_model_exploration.ipynb  model_exploration_v2.ipynb  property_eda_analysis.ipynb
pipelines/: run_feedback_monitor.py  run_promote.py  run_training.py  run_tuning.py
scripts/: promote.py  sync_production_artifacts.py  train.py  upload_production_to_s3.py
serving/api/: feature_map.py  main.py  schemas.py
serving/app/: streamlit_app.py
serving/vercel/: index.py
src/predictor/: config.py  (+7 more)
tests/: TESTS.md  conftest.py
(+80 files in other folders)
